<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="com.pkmmte.view.CircularImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_background"
                tools:context="com.miti.citizenx.CreateAccount">

    <include
            android:id="@+id/toolbar"
            layout="@layout/t_tool_bar"/>
    <com.pkmmte.view.CircularImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/user_image"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="@dimen/margin_create_user"
            android:layout_centerHorizontal="true"
            android:src="@drawable/default_user"
            android:contentDescription="@string/user_image"
            android:focusableInTouchMode="false"
            android:clickable="true"
            app:border="true"
            app:border_color="#EEEEEE"
            app:border_width="4dp"
            app:shadow="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_cuser_et"
            android:inputType="textCapWords"
            android:layout_marginTop="@dimen/margin_create_user"
            android:hint="@string/name"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"
            android:paddingLeft="@dimen/padding_10"
            android:layout_below="@+id/user_image"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxLength="64"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_cuser_et"
            android:layout_marginTop="@dimen/margin_create_user"
            android:paddingLeft="@dimen/padding_10"
            android:hint="@string/email"
            android:layout_below="@+id/name_cuser_et"
            android:layout_alignLeft="@+id/name_cuser_et"
            android:layout_alignStart="@+id/name_cuser_et"
            android:layout_alignRight="@+id/name_cuser_et"
            android:layout_alignEnd="@+id/name_cuser_et"
            android:inputType="textEmailAddress"
            android:maxLength="64"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/cemail_cuser_et"
			android:layout_marginTop="@dimen/margin_create_user"
			android:paddingLeft="@dimen/padding_10"
			android:hint="@string/confirm_email"
			android:layout_below="@+id/email_cuser_et"
			android:layout_alignLeft="@+id/email_cuser_et"
			android:layout_alignStart="@+id/email_cuser_et"
			android:layout_alignRight="@+id/email_cuser_et"
			android:layout_alignEnd="@+id/email_cuser_et"
			android:inputType="textEmailAddress"
			android:maxLength="64"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_cuser_et"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_create_user"
            android:paddingLeft="@dimen/padding_10"
            android:hint="@string/password"
            android:ems="10"
            android:layout_below="@+id/cemail_cuser_et"
            android:layout_alignLeft="@+id/cemail_cuser_et"
            android:layout_alignStart="@+id/cemail_cuser_et"
            android:layout_alignRight="@+id/cemail_cuser_et"
            android:layout_alignEnd="@+id/cemail_cuser_et"
            android:maxLength="34"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/cpassword_cuser_et"
            android:hint="@string/confirm_password"
            android:layout_marginTop="@dimen/margin_create_user"
            android:paddingLeft="@dimen/padding_10"
            android:ems="10"
            android:layout_below="@+id/password_cuser_et"
            android:layout_alignLeft="@+id/password_cuser_et"
            android:layout_alignStart="@+id/password_cuser_et"
            android:layout_alignRight="@+id/password_cuser_et"
            android:layout_alignEnd="@+id/password_cuser_et"
            android:maxLength="34"/>
	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/submit"
			android:id="@+id/confirm_cuser_bt"
			android:background="@drawable/cx_main_button"
			android:paddingLeft="@dimen/padding_10"
			android:textColor="@color/white"
			android:layout_marginTop="@dimen/margin_30"
			android:layout_below="@+id/cpassword_cuser_et"
			android:layout_alignLeft="@+id/cpassword_cuser_et"
			android:layout_alignStart="@+id/cpassword_cuser_et"
			android:layout_alignRight="@+id/cpassword_cuser_et"
			android:layout_alignEnd="@+id/cpassword_cuser_et"/>
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

</RelativeLayout>
