<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/main"
                tools:context="com.miti.citizenx.Login">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:gravity="center_horizontal"
            android:textSize="34sp"
            android:textColor="@color/white"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/user_email_et"
			android:inputType="textEmailAddress"
			android:layout_marginTop="200dp"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_marginLeft="@dimen/margin_10"
			android:layout_marginRight="@dimen/margin_10"
			android:gravity="start|center_horizontal"
			android:linksClickable="true"
			android:hint="@string/email"
			style="@style/edit_text_white_theme"
			android:textColor="@color/white"
			android:textColorHint="@color/white"
			android:paddingLeft="@dimen/padding_10"
			android:maxLength="64"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/password_et"
			android:inputType="textPassword"
			android:layout_marginTop="@dimen/margin_20"
			android:layout_below="@+id/user_email_et"
			android:layout_alignRight="@+id/user_email_et"
			android:layout_alignEnd="@+id/user_email_et"
			android:layout_alignLeft="@+id/user_email_et"
			android:layout_alignStart="@+id/user_email_et"
			android:gravity="start|center"
			style="@style/edit_text_white_theme"
			android:textColorHint="@color/white"
			android:textColor="@color/white"
			android:hint="@string/password"
			android:paddingLeft="@dimen/padding_10" android:maxLength="34"/>
	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/login"
			android:id="@+id/login_bt"
			android:background="@drawable/login_button"
			android:textColor="@color/white"
			android:layout_marginTop="@dimen/margin_30"
			android:layout_below="@+id/password_et"
			android:layout_alignLeft="@+id/password_et"
			android:layout_alignStart="@+id/password_et"
			android:layout_alignRight="@+id/password_et"
			android:layout_alignEnd="@+id/password_et"/>
	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/create_account"
			android:id="@+id/create_account_bt"
			android:background="@drawable/login_button"
			android:textColor="@color/white"
			android:layout_below="@+id/login_bt"
			android:layout_marginTop="@dimen/margin_20"
			android:layout_alignRight="@+id/login_bt"
			android:layout_alignEnd="@+id/login_bt"
			android:layout_alignLeft="@+id/login_bt"
			android:layout_alignStart="@+id/login_bt"/>
	<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/progressBar"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"/>


</RelativeLayout>
